# py-pydantic-sample

./: .gitignore  pyproject.toml
py_pydantic_sample/: main.py
