[tool.poetry]
authors = ["youkidkk <hoge.fuga@piyo.com>"]
description = ""
name = "py-pydantic-sample"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.960"
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
